[package]
name = "iron-reference"
version = "0.1.0"
authors = ["heartsucker <heartsucker@autistici.org>"]

[[bin]]
name = "iron-reference"
path = "src/main.rs"

[dependencies]
bincode = "*"
csrf = "*"
env_logger = "*"
handlebars = "*"
handlebars-iron = "*"
iron = "*"
iron-csrf = "*"
log = "*"
router = "*"
secure-session = "*"
serde = "0.9"
serde_derive = "0.9"
typemap = "*"

[dev-dependencies]
iron-test = "*"
