[package]
name = "iron-reference"
version = "0.1.0"
authors = ["heartsucker <heartsucker@autistici.org>"]

[[bin]]
name = "iron-reference"
path = "src/main.rs"

[dependencies]
bincode = "*"
env_logger = "*"
handlebars = "*"
handlebars-iron = "*"
iron = "*"
iron-csrf = "*"
log = "*"
router = "*"
secure-session = "*"
serde = "*"
serde_derive = "*"
typemap = "*"

[dev-dependencies]
iron-test = "*"
